[package]
name = "calculating_pi_rust"
version = "0.0.3"
edition = "2021"


[dependencies]
num_cpus = "1.13.1"
sysinfo = "0.26.2"
log = "0.4.17"
rug = "1.17.0"
flate2 = "1.0"
tar = "0.4"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
isahc = {version = "1.7.2", features = ["json"]}
chrono = "0.4.19"

[dev-dependencies]
criterion = "0.4.0"


[[bench]]
name = "calculating_pi"
harness = false
